<resources>
    <string name="app_name">Netflix</string>
    <string name="privacy_text">PRIVACY</string>
    <string name="sign_in_text">Sign In</string>
    <string name="icon">icon</string>
    <string name="privacy">PRIVACY</string>
    <string name="log_in">LOG IN</string>
    <string name="get_started">Get started</string>
    <string name="or">OR</string>
    <string name="sign_in_code">Use a sign-in code</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="new_account">New to Netflix? Sign up now.</string>
    <string name="captcha_text">Sign-in is protected by Google reCAPTCHA to ensure you\'re not a bot.\n Learn more.</string>
    <string name="signUpDesc">Enter your email to create or sign in to your account.</string>
    <string name="signUpTitle">Ready to watch?</string>
    <string name="create_account">Create Account</string>
    <string name="help">HELP</string>
    <string name="create_ac_description">As a member, you can watch exclusive TV programmes and films on the mobile app and all your other devices.</string>
    <string name="create_ac_title"><![CDATA[Unlimited films, TV programmes &\nmore]]></string>
    <string name="password">password</string>
    <string name="email">email</string>
</resources>