<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.netflix_clone.ui.authentication.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <ImageView
            android:id="@+id/arrowBackIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="arrowBack"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/netflixIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="NetflixIcon"
            android:src="@drawable/ic_netflix_name"
            app:layout_constraintStart_toEndOf="@id/arrowBackIcon"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailNumberTextLayout"
            style="?attr/textInputFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:layout_marginTop="100dp"
            android:backgroundTint="@color/grey_83"
            app:boxStrokeColor="@color/transparent"
            app:hintTextColor="@color/grey_83"
            app:layout_constraintTop_toBottomOf="@id/arrowBackIcon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black_83"
                android:hint="Email or phone number"
                android:inputType="text"
                android:text="@={viewModel.emailOrPhoneNumberFlow}"
                android:textColor="@color/grey_83" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextLayout"
            style="?attr/textInputFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:boxStrokeColor="@color/transparent"
            app:hintTextColor="@color/grey_83"
            app:layout_constraintTop_toBottomOf="@id/emailNumberTextLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black_83"
                android:hint="Password"
                android:inputType="text"
                android:text="@={viewModel.passwordFlow}"
                android:textColor="@color/grey_83"
                tools:layout_editor_absoluteX="52dp"
                tools:layout_editor_absoluteY="136dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signInButton"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:onClick="@{()->viewModel.navigateToSignIn()}"
            android:text="@string/sign_in_text"
            android:textColor="@color/grey_87"
            app:cornerRadius="4dp"
            app:layout_constraintTop_toBottomOf="@id/passwordTextLayout" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/orText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/or"
            android:textColor="@color/grey_83"
            app:layout_constraintBottom_toTopOf="@id/signInCodeButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signInButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signInCodeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/sign_in_code"
            app:layout_constraintTop_toBottomOf="@id/orText" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/forgotPswdButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_x_large"
            android:text="@string/forgot_password"
            android:textColor="@color/grey_87"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signInCodeButton" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_x_large"
            android:onClick="@{()->viewModel.navigateToSignup()}"
            android:text="@string/new_account"
            android:textColor="@color/grey_87"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forgotPswdButton" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/captchaText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_x_large"
            android:gravity="center"
            android:text="@string/captcha_text"
            android:textColor="@color/grey_83"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signUpButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
