<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.netflix_clone.ui.authentication.signup.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/closeIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_x_large"
            android:layout_marginEnd="@dimen/margin_x_large"
            android:src="@drawable/ic_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/titleTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:text="@string/signUpTitle"
            android:textAppearance="@style/TextAppearance.netflix.Headline4"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_marginTop="@dimen/margin_x_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/closeIcon" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/signUpDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/signUpDesc"
            android:textAppearance="@style/TextAppearance.netflix.Body1"
            android:textColor="@color/black"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="@id/titleTxt"
            app:layout_constraintTop_toBottomOf="@id/titleTxt" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailEditText"
            style="?attr/textInputOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_large"
            app:boxStrokeColor="@color/transparent"
            app:hintTextColor="@color/grey_83"
            app:layout_constraintTop_toBottomOf="@id/signUpDescription">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Email"
                android:inputType="text"
                android:textColor="@color/grey_83" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_started"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginHorizontal="@dimen/margin_large"
            app:layout_constraintTop_toBottomOf="@id/emailEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="@color/red"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>